--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,11 @@
 FROM python:3.8-slim
 
+USER root
 RUN apt update && apt install -y -qq ffmpeg
+
+COPY . /app
+
+WORKDIR /app
 
 RUN pip install -r requirements.txt
 
