--- a/backend/Dockerfile.listener
+++ b/backend/Dockerfile.listener
@@ -10,4 +10,4 @@ WORKDIR /app
 RUN pip install -r requirements.txt
 
 EXPOSE 8000
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "--workers", "4", "--timeout", "280", "app:app"]
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "--workers", "4", "--timeout", "280", "listener_app:app"]
