--- a/frontend/transcriber-front/package.json
+++ b/frontend/transcriber-front/package.json
@@ -11,9 +11,12 @@
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-particles-js": "^3.2.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
