Switch to normal db

--- a/frontend/transcriber-front/.env
+++ b/frontend/transcriber-front/.env
@@ -1,2 +1,2 @@
-REACT_APP_WEBSOCKET_SERVICE=wss://transcriber.eu-gb.cf.appdomain.cloud
-REACT_APP_WEBRTC_SERVICE=https://transcriber.eu-gb.cf.appdomain.cloud
+REACT_APP_WEBSOCKET_SERVICE=ws://192.168.1.14:8080
+REACT_APP_WEBRTC_SERVICE=http://192.168.1.14:8080
